src/App.css
.App {
  text-align: center;
  height: 100%;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

section {
  min-height: 80vh;
  padding: 3em 5vw 0;
  /* box-shadow: 0 5px 5px; */
}

#hero {
  /* margin-top: 10vh; */
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  /* text-align: left;
  align-items: center; */
}

#header {
  display: flex;
  margin-left: -1em;
  margin-right: -1em;
  justify-content: center;
  gap: 5vw;
  align-items: baseline;
}

#header h3 {
  text-align: left;

}

#hero h1 {
  margin-bottom: 0;
}

#hero h3{
  font-weight: 200;
  font-size: 32px;
  margin-top: 0;
}

#hero div:first-of-type{
  display: flex;
  align-self: center;
}

#hero p {
  /* flex-grow: 1;
  font-size: 16px; */
  /* width: 50%; */
}

#intro {
  border-right: 1px solid antiquewhite;
  width: 250px;
  font-size: 24px;
  font-weight: bold;
}

#tech {
  margin-bottom: 1em;
  display: flex;
  flex-wrap: wrap;
  align-self: center;
  justify-content: space-around;
  gap: 3vw;
  max-width: 60vh;
  background-color: black;
  padding: 1em;
  box-shadow: 0px 0px 16px black;
  border-radius: 16px;
}

#tech img {
  width: 4em;
  margin: 0;
}

#project-list {
  display: flex;
  gap: 4vw;
  flex-direction: row;
  justify-content: space-around;
  flex-wrap: wrap;
  padding-left: 0;
  padding-right: 0;
}

.proj-card {
  position: relative;
  width: 250px;
  height: 325px;
  height: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.proj-card h3 {
  font-weight: 100;
}

.overlap {
  /* background-color: rgb(93, 0, 0); */
  max-width: 100%;
  max-height: 100%;
  height: 275px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.links {
  display: flex;
  justify-content: space-between;
  margin: .5em;
}

.link {
  margin: 0 1em;
  font-family: 'Prata', serif;
  border: 1px solid antiquewhite;
  padding: .5em;
  transition: .5s;
}

.link:hover {
  border-radius: 50px;
}

.proj-img,
.proj-description {
  max-width: 250px;
  max-height: 250px;
  position: absolute;
}

.proj-description {
  background-color: white;
  padding: 12px 2px;
  text-align: center;
  text-justify: center;
  height: 100%;
  color: rgb(93, 0, 0);
  opacity: 0;
  transition: .5s;
  margin: 0;
  font-size: 16px;
}

.overlap:hover .proj-description{
  opacity: .9;
}

#about-text {
  display: flex;
  gap: 2em;
}

#about-text p{
  font-size: 20px;
  /* width: 50%; */
}

#candid-container {
  margin-top: 1em;
  border-top: 1px solid antiquewhite;
}

#candid {
  width: 250px;
  display: block;
  margin: 1em auto 0;
}

#headshot {
  display: block;
  width: 250px;
  margin-left: 1em;
}

#contact-resume {
  display: flex;
  justify-content: space-around;
}

#contact-resume h2 {
  font-size: 40px;
}

@media (max-width: 650px) {
  #contact-resume {
    flex-direction: column;
    min-height: 0;
  }
}

@media (max-width: 850px) {
  #about-text {
    display: block;
  }  
  #about-text p {
    width: 100%;
  }
  #header {
    flex-direction: column;
  }
  #hero div:first-of-type {
    flex-direction: column;
  }
  #intro {
    border-right: none;
    border-bottom: 1px solid antiquewhite;
    padding-bottom: 1em;
    text-align: center;
  }
}


@media (max-width: 500px) {
  #tech img {
    width: 3em;
  }
}

h1 {
  font-size: 70px;
  font-weight: 300;
  margin-top: 0;
}

h2 {
  font-size: 54px;
  font-weight: 200;
  margin-top: 0;
  margin-bottom: 0;
}

h3 {
  margin-bottom: 0;
}

